# mopeka-api

./: .gitignore  LICENSE  README.md  export_history.py  pyproject.toml  read_history.py  requirements.txt  run.py
.github/workflows/: python-publish.yml
mopeka/: __init__.py  client.py  config.json  export_history.py  read_history.py  run.py
