[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mopeka-api"
dynamic = ["version"]
description = "Python client for Mopeka Cloud API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name="MedVedZot", email="jss.putty@gmail.com" },
]
keywords = [
  "mopeka",
  "propane",
  "tank",
  "sensor",
  "iot",
  "home-automation"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "requests>=2.26.0",
  "pycognito>=2024.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.3.0",
  "build",
]

[project.urls]
Homepage = "https://github.com/MedVedZot/mopeka-api"
Repository = "https://github.com/MedVedZot/mopeka-api"
Issues = "https://github.com/MedVedZot/mopeka-api/issues"

[project.scripts]
mopeka-run = "mopeka.run:main"
mopeka-history = "mopeka.read_history:main"
mopeka-export = "mopeka.export_history:main"

[tool.hatch.version]
path = "mopeka/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["mopeka"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]